<resources>
    <string name="app_name">MessengerFirebase</string>
    <string name="sign_up">Sign Up</string>
    <string name="sign_in">Sign In</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="forgot_password">Forgot Password?</string>
    <string name="you_re_welcome">You are welcome!</string>
    <string name="registration_title">Here is your first step with us!</string>
    <string name="name">Name</string>
    <string name="last_name">Last Name</string>
    <string name="your_age">Your age</string>
    <string name="registration_name">Name</string>
    <string name="registration_last_name">Last Name</string>
    <string name="registration_age">Age</string>
    <string name="register">Register</string>
    <string name="background">background</string>
    <string name="image_view_for_login">Image View for login</string>
    <string name="image_view_for_password">Image View for Password</string>
    <string name="password_recovery">Password Recovery</string>
    <string name="reset_password">Reset Password</string>
    <string name="sign_out">Sign Out</string>
    <string name="success_reset_email">The reset link has been successfully sent</string>
    <string name="long_text">An Authentication emulator is part of the Local Emulator Suite, which enables your app to interact with emulated database content and config, as well as optionally your emulated project resources (functions, other databases, and security rules).</string>
    <string name="name_res">Иван Иванов, 27</string>
    <string name="type_your_message">Type your message</string>
    <string name="send_message">Send Message</string>
</resources>