<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/background"
    android:orientation="vertical"
    tools:context=".RegistrationActivity">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/white"
        android:layout_margin="16dp"
        android:padding="16dp">

        <TextView
            android:id="@+id/registrationTitle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:padding="16dp"
            android:text="@string/registration_title"
            android:textAlignment="center"
            android:textColor="@color/mint"
            android:textSize="@dimen/title_size"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/registrationEmail"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="12dp"
            android:text="@string/email"
            android:textColor="@color/mint"
            android:textSize="@dimen/usual_text_size"
            app:layout_constraintTop_toBottomOf="@id/registrationTitle" />

        <EditText
            android:id="@+id/editTextTextEmailAddressRegistration"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:hint="@string/email"
            android:importantForAutofill="no"
            android:inputType="textEmailAddress"
            android:backgroundTint="@color/mint"
            android:padding="12dp"
            android:textColor="@color/black"
            app:layout_constraintTop_toBottomOf="@id/registrationEmail" />

        <TextView
            android:id="@+id/registrationPassword"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="12dp"
            android:text="@string/password"
            android:textColor="@color/mint"
            android:textSize="@dimen/usual_text_size"
            app:layout_constraintTop_toBottomOf="@id/editTextTextEmailAddressRegistration" />

        <EditText
            android:id="@+id/editTextTextPasswordRegistration"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:hint="@string/password"
            android:inputType="textPassword"
            android:backgroundTint="@color/mint"
            android:padding="12dp"
            android:textColor="@color/black"
            app:layout_constraintTop_toBottomOf="@id/registrationPassword"
 />

        <TextView
            android:id="@+id/registrationName"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="12dp"
            android:text="@string/name"
            android:textColor="@color/mint"
            android:textSize="@dimen/usual_text_size"
            app:layout_constraintTop_toBottomOf="@id/editTextTextPasswordRegistration" />

        <EditText
            android:id="@+id/editTextName"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/registration_name"
            android:padding="12dp"
            android:textColor="@color/black"
            android:backgroundTint="@color/mint"
            app:layout_constraintTop_toBottomOf="@id/registrationName"
 />

        <TextView
            android:id="@+id/registrationLastName"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="12dp"
            android:text="@string/last_name"
            android:textColor="@color/mint"
            android:textSize="@dimen/usual_text_size"
            app:layout_constraintTop_toBottomOf="@id/editTextName" />

        <EditText
            android:id="@+id/editTextLastName"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/registration_last_name"
            android:textColor="@color/black"
            android:padding="12dp"
            android:backgroundTint="@color/mint"
            app:layout_constraintTop_toBottomOf="@id/registrationLastName" />

        <TextView
            android:id="@+id/registrationAge"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="12dp"
            android:text="@string/your_age"
            android:textColor="@color/mint"
            android:textSize="@dimen/usual_text_size"
            app:layout_constraintTop_toBottomOf="@id/editTextLastName" />

        <EditText
            android:id="@+id/editTextAge"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/registration_age"
            android:padding="12dp"
            android:textColor="@color/black"
            android:backgroundTint="@color/mint"
            android:inputType="number"
            app:layout_constraintTop_toBottomOf="@id/registrationAge" />

        <Button
            android:id="@+id/buttonRegistration"
            style="@style/Widget.MaterialComponents.Button.OutlinedButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="8dp"
            android:padding="8dp"
            android:text="@string/register"
            android:textAllCaps="false"
            android:textColor="@color/mint"
            android:textSize="@dimen/usual_text_size"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/editTextAge"
            app:strokeColor="@color/mint" />

    </androidx.constraintlayout.widget.ConstraintLayout>

</ScrollView>