<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/background"
    android:gravity="center"
    tools:context=".LoginActivity">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/black_50"
        android:foregroundGravity="center"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <TextView
            android:id="@+id/title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/you_re_welcome"
            android:textAlignment="center"
            android:textColor="@color/white"
            android:textSize="@dimen/title_size"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <EditText
            android:id="@+id/editTextTextEmailAddress"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="8dp"
            android:ems="10"
            android:hint="@string/email"
            android:inputType="textEmailAddress"
            android:padding="16dp"
            android:textColor="@color/white"
            android:textColorHint="@color/grey"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/title"
            tools:ignore="Autofill" />

        <EditText
            android:id="@+id/editTextNumberPassword"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="8dp"
            android:ems="10"
            android:hint="@string/password"
            android:inputType="numberPassword"
            android:padding="16dp"
            android:textColor="@color/white"
            android:textColorHint="@color/grey"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/editTextTextEmailAddress"
            tools:ignore="Autofill" />

        <Button
            android:id="@+id/buttonSignUp"
            style="@style/Widget.MaterialComponents.Button.OutlinedButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:text="@string/sign_up"
            android:textAllCaps="false"
            android:textColor="@color/white"
            android:textSize="@dimen/usual_text_size"
            app:layout_constraintEnd_toStartOf="@+id/buttonSignIn"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/editTextNumberPassword"
            app:strokeColor="@color/white" />

        <Button
            android:id="@+id/buttonSignIn"
            style="@style/Widget.MaterialComponents.Button.OutlinedButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:text="@string/sign_in"
            android:textAllCaps="false"
            android:textColor="@color/white"
            android:textSize="@dimen/usual_text_size"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toEndOf="@+id/buttonSignUp"
            app:layout_constraintTop_toBottomOf="@+id/editTextNumberPassword"
            app:strokeColor="@color/white" />

        <ImageView
            android:layout_width="42dp"
            android:layout_height="24dp"
            android:contentDescription="@string/image_view_for_login"
            app:layout_constraintBottom_toBottomOf="@+id/editTextTextEmailAddress"
            app:layout_constraintEnd_toEndOf="@+id/editTextTextEmailAddress"
            app:layout_constraintTop_toTopOf="@+id/editTextTextEmailAddress"
            app:layout_constraintVertical_bias="0.666"
            app:srcCompat="@drawable/envelope" />

        <ImageView
            android:layout_width="38dp"
            android:layout_height="34dp"
            android:contentDescription="@string/image_view_for_password"
            app:layout_constraintBottom_toBottomOf="@+id/editTextNumberPassword"
            app:layout_constraintEnd_toEndOf="@+id/editTextNumberPassword"
            app:layout_constraintTop_toTopOf="@+id/editTextNumberPassword"
            app:srcCompat="@drawable/lock" />

        <Button
            android:id="@+id/buttonForgotPassword"
            style="@style/Widget.MaterialComponents.Button.OutlinedButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/forgot_password"
            android:textAlignment="center"
            android:textAllCaps="false"
            android:textColor="@color/white"
            android:textSize="@dimen/usual_text_size"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/buttonSignUp" />

    </androidx.constraintlayout.widget.ConstraintLayout>

</LinearLayout>