<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ForgetPasswordActivity"
    android:background="@drawable/background"
    >

    <ImageView
        android:id="@+id/imageView2"
        android:layout_width="match_parent"
        android:layout_height="252dp"
        android:layout_margin="16dp"
        android:contentDescription="@string/background"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@android:drawable/screen_background_light" />

    <TextView
        android:id="@+id/textViewTitleResetPassword"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/password_recovery"
        android:padding="16dp"
        android:textAlignment="center"
        android:textColor="@color/mint"
        android:textSize="@dimen/title_size"
        app:layout_constraintEnd_toEndOf="@+id/imageView2"
        app:layout_constraintStart_toStartOf="@+id/imageView2"
        app:layout_constraintTop_toTopOf="@+id/imageView2" />

    <TextView
        android:id="@+id/textViewEmail"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="12dp"
        android:paddingStart="12dp"
        android:layout_margin="16dp"
        android:layout_marginStart="16dp"
        android:text="@string/email"
        android:textColor="@color/mint"
        android:textSize="@dimen/usual_text_size"
        app:layout_constraintTop_toBottomOf="@+id/textViewTitleResetPassword"
        app:layout_constraintStart_toStartOf="@+id/imageView2"
        />

    <EditText
        android:id="@+id/editTextTextEmailAddressResetPassword"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/email"
        android:backgroundTint="@color/mint"
        android:textColor="@color/black"
        android:layout_marginStart="16dp"
        android:layout_marginEnd="16dp"
        android:padding="12dp"
        android:inputType="textEmailAddress"
        app:layout_constraintEnd_toEndOf="@+id/imageView2"
        app:layout_constraintStart_toStartOf="@+id/imageView2"
        app:layout_constraintTop_toBottomOf="@+id/textViewEmail"
        tools:ignore="TextFields" />

    <Button
        android:id="@+id/buttonResetPassword"
        style="@style/Widget.MaterialComponents.Button.OutlinedButton"
        app:strokeColor="@color/mint"
        android:textAllCaps="false"
        android:textColor="@color/mint"
        android:textSize="@dimen/usual_text_size"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/reset_password"
        app:layout_constraintEnd_toEndOf="@+id/imageView2"
        app:layout_constraintStart_toStartOf="@+id/imageView2"
        app:layout_constraintTop_toBottomOf="@+id/editTextTextEmailAddressResetPassword"
        />

</androidx.constraintlayout.widget.ConstraintLayout>